# DrumVisualizer

./: .gitignore  CMakeLists.txt  DrumVisualizer.sln  DrumVisualizer.vcxproj  DrumVisualizer.vcxproj.filters  README.md  settings.cfg
assets/: sprite.frag  sprite.vert  text.frag  text.vert
lib/: RtMidi.h
lib/include/glad/: glad.c  glad.h
lib/include/rtmidi/: RtMidi.cpp
src/: Buffer.cpp  Buffer.hpp  Defines.hpp  GraphicsInclude.hpp  Main.cpp  Renderer.cpp  Renderer.hpp  Resources.cpp  Resources.hpp  UI.cpp  UI.hpp  Visualizer.cpp  Visualizer.hpp  Window.cpp  Window.hpp
